--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,7 @@
 PORT=4500
-MONGO_URI=mongodb://localhost:27017/VoltPathDB
+MONGO_URI=mongodb://localhost:27017/voltpathDb
+CORS_ORIGIN=http://localhost:5173
+DEFAULT_ELECTRICITY_RATE=10
+DEFAULT_TARGET_SOC=80
+DEFAULT_SAFETY_FACTOR=0.85
+DEFAULT_CHARGING_POWER_KW=60
